cockpit.la: fix SLOW driver shift preference changes #4474

--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -1344,6 +1344,10 @@ input {
 .tb-grid .td-large, .tb-hack .td-large{
 	width: 40% !important;
 }
+	.tb-grid .td-larger{
+		width: 60% !important;
+	}
+
 .tb-grid .td-medium{
 	width: 60%;
 	text-align: left;
